--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <!-- Social media Icons -->
 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="C:\Users\david\OneDrive\Desktop\sunnyProject\styles.css">
+		<link rel="stylesheet" href="styles.css">
 
 		<title>It's Always Sunny in Philadelphia</title>
- 		<link rel="icon" type="image/x-icon" href="C:\Users\david\OneDrive\Desktop\sunnyProject\icon.jpg">
+ 		<link rel="icon" type="image/x-icon" href="icon.jpg">
 </head>
 <body>
 
@@ -27,7 +27,7 @@
 
 
 <div class="bannerImage">
-	<img src="C:\Users\david\OneDrive\Desktop\sunnyProject\pint.jpg">
+	<img src="pint.jpg">
 </div>
 
 <hr>
@@ -58,7 +58,7 @@
       								<p>1st - The Jolly Judge</p>
     							</div>
     							<div class="col-6 iconHeadingRight">
-      								<img class="kittenMittens1" src="C:\Users\david\OneDrive\Desktop\sunnyProject\jollyJudge.jpg">
+      								<img class="kittenMittens1" src="jollyJudge.jpg">
     							</div>
   						</div>
 					</div>
@@ -97,7 +97,7 @@
       								2nd - Bannermans
     							</div>
     							<div class="col-6 iconHeadingRight">
-      								<img class="kittenMittens1" src="C:\Users\david\OneDrive\Desktop\sunnyProject\bannermans.jpg">
+      								<img class="kittenMittens1" src="bannermans.jpg">
     							</div>
   						</div>
 					</div>
@@ -122,7 +122,7 @@
       								3rd - The Blue Blazer
     							</div>
     							<div class="col-6 iconHeadingRight">
-      								<img class="kittenMittens1" src="C:\Users\david\OneDrive\Desktop\sunnyProject\blueBlazer.jpg">
+      								<img class="kittenMittens1" src="blueBlazer.jpg">
     							</div>
   						</div>
 					</div>
