--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<div class="container">
   						<div class="row">
     							<div class="col-6 iconHeadingLeft">
-      								<p>1st - The Jolly Judge</p>
+      								Jolly Judge
     							</div>
     							<div class="col-6 iconHeadingRight">
       								<img class="kittenMittens1" src="jollyJudge.jpg">
@@ -70,6 +70,16 @@
 							<a href="https://www.jollyjudge.co.uk/index.html" target="_blank" class="fa fa-globe"></a>
             						<a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fjolly_judge" target="_blank" class="fa fa-twitter fa-large"></a>
             						<a href="https://www.google.com/maps/place/Jolly+Judge/@55.9493635,-3.1942106,20.29z/data=!4m9!1m2!2m1!1sjolly+judge+google+maps!3m5!1s0x4887c78e6bd64f4d:0xa5347cc4cc53eb17!8m2!3d55.9493629!4d-3.194052!16s%2Fg%2F11bzswgsq4?entry=ttu" target="_blank" class="fa fa-map-marker"></a>
+        					</div>
+    					</div>
+					<div class="social-media" style="position: relative">
+						<img src="rosette.png" alt="Jaws" class="rosette">
+        					<div class="stars">
+            						<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
         					</div>
     					</div>
 					<p>The Jolly Judge sits at the foot of an Edinburgh ‘close’, at the centre of one of the capital’s 
@@ -94,7 +104,7 @@
 					<div class="container">
   						<div class="row">
     							<div class="col-6 iconHeadingLeft">
-      								2nd - Bannermans
+      								Bannermans
     							</div>
     							<div class="col-6 iconHeadingRight">
       								<img class="kittenMittens1" src="bannermans.jpg">
@@ -103,9 +113,36 @@
 					</div>
 				</button>
 				<div class="content">
-  					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt 
-					ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-					laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<div class="social-media">
+        					<div class="social-media-icons">
+            						<a href="https://www.facebook.com/BannermansBar/" target="_blank" class="fa fa-facebook"></a>
+							<a href="https://www.bannermanslive.co.uk/" target="_blank" class="fa fa-globe"></a>
+            						<a href="https://x.com/BannermansBar" target="_blank" class="fa fa-twitter fa-large"></a>
+            						<a href="https://www.google.com/maps/place/Bannerman's+Bar/@55.9488447,-3.1891855,17z/data=!3m1!4b1!4m6!3m5!1s0x4887c785bc1c504b:0x1b2c975a5b5474ba!8m2!3d55.9488447!4d-3.1866106!16s%2Fm%2F0k8w9t0?entry=ttu" target="_blank" class="fa fa-map-marker"></a>
+        					</div>
+    					</div>
+					<div class="social-media" style="position: relative">
+						<img src="rosette2.png" alt="Jaws" class="rosette">
+        					<div class="stars">
+            						<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star-half" aria-hidden="true"></i>
+        					</div>
+    					</div>
+					<p>Hosting bands and solo artists seven nights a week, we are dedicated to bringing you the very best in 
+					up-and-coming local talent, rising national stars and famous acts from around the world.</p>
+
+					<p>Every genre of music is welcome, and we pride ourselves on providing everything a band needs for a performance 
+					with a full backline, 5K P.A. and lighting rig, and some of the best sound engineers in town.</p> 
+
+					<p>Our friendly and knowledgeable staff are always happy to help out with any of your requirements or needs, 
+					so if you're simply grabbing a quiet pint in the afternoon, having a big night out, playing or putting on your 
+					first gig, or even just curious, come and check us out – you won’t be disappointed!</p>
+					<hr>
+					<p class="address"><b>Address:</b> 212 Cowgate, Edinburgh, EH1 1NQ<p>
+					<p class="address"><b>Opening Hours:</b> 12pm - 1am </p>
 				</div>
 			<div>
 	</li>
@@ -113,13 +150,13 @@
 <!-- Blue Blazer -->	
 
 	<li>
-		<a><p class="name">Blue Blazer</p>
+		<a><p class="name">Blue Blazer</p></a>
 			<div class="center-icons">
 				<button type="button" class="collapsible">
 					<div class="container">
   						<div class="row">
     							<div class="col-6 iconHeadingLeft">
-      								3rd - The Blue Blazer
+      								Blue Blazer
     							</div>
     							<div class="col-6 iconHeadingRight">
       								<img class="kittenMittens1" src="blueBlazer.jpg">
@@ -128,12 +165,81 @@
 					</div>
 				</button>
 				<div class="content">
-  					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt 
-					ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-					laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<div class="social-media">
+        					<div class="social-media-icons">
+            						<a href="https://www.facebook.com/jollyjudge/?locale=en_GB" target="_blank" class="fa fa-facebook"></a>
+							<a href="https://www.jollyjudge.co.uk/index.html" target="_blank" class="fa fa-globe"></a>
+            						<a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fjolly_judge" target="_blank" class="fa fa-twitter fa-large"></a>
+            						<a href="https://www.google.com/maps/place/Jolly+Judge/@55.9493635,-3.1942106,20.29z/data=!4m9!1m2!2m1!1sjolly+judge+google+maps!3m5!1s0x4887c78e6bd64f4d:0xa5347cc4cc53eb17!8m2!3d55.9493629!4d-3.194052!16s%2Fg%2F11bzswgsq4?entry=ttu" target="_blank" class="fa fa-map-marker"></a>
+        					</div>
+    					</div>
+					<div class="social-media" style="position: relative">
+						<img src="rosette3.png" alt="Jaws" class="rosette">
+        					<div class="stars">
+            						<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star-half" aria-hidden="true"></i>
+        					</div>
+    					</div>
+					<p>The Jolly Judge sits at the foot of an Edinburgh ‘close’, at the centre of one of the capital’s 
+					historic Old Town, just 2 minutes’ walk from the Castle.</p>
+
+					<p>An independently-owned bar with low beamed ceilings, a warm fire and a tranquil atmosphere – 
+					this is Scottish hospitality at its best. Sample the wide range of malt whiskies, real ales and tempting bar lunches.</p>
+					<hr>
+					<p class="address"><b>Address:</b> 7 James Court, Lawnmarket, Edinburgh, United Kingdom<p>
+					<p class="address"><b>Opening Hours:</b> 12.00 - 23.00</p>
 				</div>
 			<div>
-		</a>
+	</li>
+
+<!-- Bow Bar -->	
+
+	<li>
+		<a><p class="name">Bow Bar</p></a>
+			<div class="center-icons">
+				<button type="button" class="collapsible">
+					<div class="container">
+  						<div class="row">
+    							<div class="col-6 iconHeadingLeft">
+      								Bow bar
+    							</div>
+    							<div class="col-6 iconHeadingRight">
+      								<img class="kittenMittens1" src="bowBar.jpg">
+    							</div>
+  						</div>
+					</div>
+				</button>
+				<div class="content">
+					<div class="social-media">
+        					<div class="social-media-icons">
+            						<a href="https://www.facebook.com/jollyjudge/?locale=en_GB" target="_blank" class="fa fa-facebook"></a>
+							<a href="https://www.jollyjudge.co.uk/index.html" target="_blank" class="fa fa-globe"></a>
+            						<a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fjolly_judge" target="_blank" class="fa fa-twitter fa-large"></a>
+            						<a href="https://www.google.com/maps/place/Jolly+Judge/@55.9493635,-3.1942106,20.29z/data=!4m9!1m2!2m1!1sjolly+judge+google+maps!3m5!1s0x4887c78e6bd64f4d:0xa5347cc4cc53eb17!8m2!3d55.9493629!4d-3.194052!16s%2Fg%2F11bzswgsq4?entry=ttu" target="_blank" class="fa fa-map-marker"></a>
+        					</div>
+    					</div>
+					<div class="social-media" style="position: relative">
+        					<div class="stars">
+            						<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star" aria-hidden="true"></i>
+							<i class="fa fa-star-half" aria-hidden="true"></i>
+        					</div>
+    					</div>
+					<p>The Jolly Judge sits at the foot of an Edinburgh ‘close’, at the centre of one of the capital’s 
+					historic Old Town, just 2 minutes’ walk from the Castle.</p>
+
+					<p>An independently-owned bar with low beamed ceilings, a warm fire and a tranquil atmosphere – 
+					this is Scottish hospitality at its best. Sample the wide range of malt whiskies, real ales and tempting bar lunches.</p>
+					<hr>
+					<p class="address"><b>Address:</b> 7 James Court, Lawnmarket, Edinburgh, United Kingdom<p>
+					<p class="address"><b>Opening Hours:</b> 12.00 - 23.00</p>
+				</div>
+			<div>
 	</li>
 </ul>
 
