--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       								Jolly Judge
     							</div>
     							<div class="col-6 iconHeadingRight">
-      								<img class="kittenMittens1" src="jollyJudge.jpg">
+      								<img class="pubPhoto" src="jollyJudge.jpg">
     							</div>
   						</div>
 					</div>
@@ -107,7 +107,7 @@
       								Bannermans
     							</div>
     							<div class="col-6 iconHeadingRight">
-      								<img class="kittenMittens1" src="bannermans.jpg">
+      								<img class="pubPhoto" src="bannermans.jpg">
     							</div>
   						</div>
 					</div>
@@ -159,7 +159,7 @@
       								Blue Blazer
     							</div>
     							<div class="col-6 iconHeadingRight">
-      								<img class="kittenMittens1" src="blueBlazer.jpg">
+      								<img class="pubPhoto" src="blueBlazer.jpg">
     							</div>
   						</div>
 					</div>
@@ -207,7 +207,7 @@
       								Bow bar
     							</div>
     							<div class="col-6 iconHeadingRight">
-      								<img class="kittenMittens1" src="bowBar.jpg">
+      								<img class="pubPhoto" src="bowBar.jpg">
     							</div>
   						</div>
 					</div>
