--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
 </div>
 
-<ol id="myUL">
+<ul id="myUL">
 
 <!-- Jolly Judge -->
 
@@ -1462,7 +1462,7 @@
 				</div>
 			<div>
 	</li>
-</ol>
+</ul>
 
 <hr>
 
@@ -1485,11 +1485,11 @@ for (i = 0; i < coll.length; i++) {
 
 <script>
 function myFunction() {
-    var input, filter, ol, li, a, i, txtValue;
+    var input, filter, ul, li, a, i, txtValue;
     input = document.getElementById("myInput");
     filter = input.value.toUpperCase();
-    ol = document.getElementById("myUL");
-    li = ol.getElementsByTagName("li");
+    ul = document.getElementById("myUL");
+    li = ul.getElementsByTagName("li");
     for (i = 0; i < li.length; i++) {
         a = li[i].getElementsByTagName("a")[0];
         txtValue = a.textContent || a.innerText;
