--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-<h1 class="heading">Edinburgh's 30 Best Pubs</h1>
+<h1 class="heading">Edinburgh's 30 Best Pubs - 2024</h1>
 
 
 <div class="bannerImage">
